--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	  <meta name="keywords" content="Шаблон продающего сайта, мини сайт, шаблон" />
 	  <meta name="description" content="Шаблон продающего сайта"/>
   	  <meta name="language" content="ru-RU"/>
-	  <title>Шаблон продающего сайта</title>		
+	  <title>Сайт1 </title>		
 	  <link href="css/styles.css" type="text/css" rel="stylesheet">
       
 </head>
