--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	  <meta name="keywords" content="Шаблон продающего сайта, мини сайт, шаблон" />
+	  <meta name="keywords" content="шляпа" />
 	  <meta name="description" content="Шаблон продающего сайта"/>
   	  <meta name="language" content="ru-RU"/>
 	  <title>Сайт1 </title>		
